<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context = ".ClientActivity">

    <android.opengl.GLSurfaceView
        android:id="@+id/local_video_view_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/remote_video_view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/blue"
        android:visibility="visible"
        app:layout_constraintDimensionRatio="3:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="wrap_content_constrained"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/ic_launcher_foreground" />
    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/control_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btn_mute"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@id/btn_call"
            android:background="@drawable/round_button"
            android:contentDescription="@string/mute"

            android:onClick="onLocalAudioMuteClicked"
            android:src="@drawable/ic_baseline_mic_24" />

        <ImageButton
            android:id="@+id/btn_call"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerVertical="true"
            android:background="@drawable/round_button_red"
            android:contentDescription="@string/end_call"

            android:onClick="leaveChannel"
            android:src="@drawable/ic_baseline_call_end_24" />

        <ImageButton
            android:id="@+id/btn_show_point_cloud"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/btn_call"
            android:background="@drawable/round_button"
            android:contentDescription="@string/show_point_cloud"

            android:src="@drawable/ic_baseline_visibility_off_24" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>